--- a/blog/2024-06-20-jam1recap.md
+++ b/blog/2024-06-20-jam1recap.md
@@ -1,6 +1,6 @@
 ---
 slug: jam1recap
-title: Jam 1 recap
+title: "Jam #1 recap"
 authors: [mux]
 tags: [jam, rives]
 ---
@@ -18,17 +18,18 @@ Check out the great games developed during the jam below. You can test them dire
 
 The plot of every good sci-fi movie but now you can live and breathe it in a retro game! Your planet is under attack, so you fight some colorful alien spaceships. It's a side-scrolling shooter and the enemies have unique movement/shooting patterns. Read through the full description to get even more pumped before you give it a try. Can’t mess with the diner…
 
- 
-> Controls: Arrow keys: move, D: fire
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/peeyow.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
+> Controls: Arrow keys: move, D: fire
 
  - [Itch page](https://ednekebno.itch.io/peeyow)
 
-  
 
 ### Blockie by [Ednekebno](https://x.com/ednekebno)
 
 Ednekebno was on a roll for this first jam, as he submitted two games! This is the firs game he submitted, and it helped him get used to the system. It's a color-matching puzzle game. It looks like tetris on the surface but has its own unique set of rules. Beyond creating a fun game, this project is also technically interesting. The cartridge has a built-in MIDI player, which can play .mid files.
+
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/blockie.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
 > Controls: Up to rotate blocks, Left and Right to move
 
@@ -38,6 +39,8 @@ Ednekebno was on a roll for this first jam, as he submitted two games! This is t
 ###  Real ninja challenge by [AleisterCodely](https://x.com/AleisterCodely) 
 
 I love slashing fruits almost as much as I love eating them. Fruit Ninja was one of my first iPhone experiences back in the day. Not the typical console nostalgia, but it brought back some memories of experiencing the magic of touch for the first time. Also has some guitar hero vibes but with fruits, very cool.
+
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/realninjachallenge.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
 > Controls: A to begin, Arrows: slash fruits appearing on screen
 
@@ -49,8 +52,9 @@ I love slashing fruits almost as much as I love eating them. Fruit Ninja was one
 
 This game has a very different theme compared to the other games in this jam, this one is more strategic, you need to build a sustainable city and economy. Beyond being a score-based game, this could be an interesting fit for tapes. Build out a beautiful city, and interesting road systems and generate a unique tape of your setup.
 
-> Controls: Q: open menu, arrows: move and pick location, F/W: build
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/simple-city-builder.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
+> Controls: Q: open menu, arrows: move and pick location, F/W: build
 
  - [Itch page](https://deluxe1337.itch.io/simple-city-builder)
 
@@ -58,8 +62,9 @@ This game has a very different theme compared to the other games in this jam, th
 
 I was not born yet when the [Atari 2600](https://pt.wikipedia.org/wiki/Atari_2600) came out, so this was my first time getting the [River Raid](https://en.wikipedia.org/wiki/River_Raid) feeling. And I now understand why this was a classic game. Simple yet addictive!
 
-> Controls: Left and right: move horizontally; Up: speed up; Down: slow down; Z key or gamepad button A1: fire
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/river-rives.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
+> Controls: Left and right: move horizontally; Up: speed up; Down: slow down; Z key or gamepad button A1: fire
 
 
  - [Itch page](https://pickleberto.itch.io/river-rives)
@@ -68,8 +73,9 @@ I was not born yet when the [Atari 2600](https://pt.wikipedia.org/wiki/Atari_260
 
 Breakout is a classic arcade video game developed and published by Atari and designed by Steve Wozniak. Danilo shipped this game in record time, the jam had just started. I remember playing this on the iPod Nano back in the early 2000s. I could see mods/custom rules emerge around a base game like Breakout.
 
-> Controls: Arrows to move, Z to kickoff ball
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/breakout.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
+> Controls: Arrows to move, Z to kickoff ball
 
  - [Itch page](https://dtuler.itch.io/breakout-rives)
  - [Github](https://github.com/tuler/breakout-rives)
@@ -78,8 +84,9 @@ Breakout is a classic arcade video game developed and published by Atari and des
 
 Fabio built a very cool combo game. Shoot down the red enemies with your fighter plane, and then answer trivia questions to move to the next stage. Love the questions and lore which center around cartesi, the tech used to power rives. Make sure to read the description on itch. Fun concept!
 
-> Controls: Arrows: move, S: fire
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/dave-raid.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
+> Controls: Arrows: move, S: fire
 
  - [Itch page](https://fabiooshiro.itch.io/dave-raid)
  - [Github](https://github.com/fabiooshiro/dave-raid)
@@ -88,16 +95,18 @@ Fabio built a very cool combo game. Shoot down the red enemies with your fighter
 
 Eduardo is part of the core RIVES team, focused on building RIV itself (so the game was disqualified from prizes). Bladebomber is written in pure C. Eduardo built it to demonstrate the RIV console C API. Furthermore it can serve as an example or template for future dungeon-crawler-type games on RIVES. A player could also easily build custom maps to extend the game in the future. This is a beautiful and fun game to play, and I love how Eduardo got to build this with his girlfriend who focused on designing the levels.
 
-> Controls: UP/DOWN/LEFT/RIGHT: Walk, Z: Dash, X : Use blade, C: Use bomb
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/bladebomber.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
+> Controls: UP/DOWN/LEFT/RIGHT: Walk, Z: Dash, X : Use blade, C: Use bomb
 
  - [Itch page](https://edubart.itch.io/bladebomber)
  - [Github](https://github.com/edubart/bladebomber)
 
 ### Life is hard by [Lyno](https://github.com/lynoferraz)
 
-
 This is not just any game, it's "[Game of life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life)" running on RIVES! Lyno is also a core RIVES team member and wanted to build a unique game that uniquely fits tapes. The lifeforms you create can take on many shapes, making every tape a unique creation/life that can be shared, collected, and enjoyed. To play, place the desired cells and let the simulation run. Lyno also added an interesting metric system which you can read about on the itch page. 
+
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam1/life.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
 > Controls: Arrows: move the cursor and keep pressed to move faster, Z/A1 to set/unset cell,  X/A2: to start the simulation
 
@@ -117,4 +126,6 @@ We hope that everyone who participated enjoyed building on RIVES. One of our key
 
 You can also view the post-jam community call video below, where we play the games and discuss feedback and impressions from the participants and players.
 
-https://youtu.be/EJotbYRbmgk?si=fD3zZBLC9vnWEt3D
+<div align="center"><iframe id="ytplayer" type="text/html" width="640" height="360"
+  src="https://www.youtube.com/embed/EJotbYRbmgk"
+  frameborder="0"></iframe></div>
