Optimize blog posts

--- a/blog/2024-06-20-jam1recap.md
+++ b/blog/2024-06-20-jam1recap.md
@@ -1,16 +1,25 @@
 ---
 slug: jam1recap
 title: "Jam #1 recap"
+description: "Recap of the first RIVES game jam"
+image: /img/blog/jam1.png
 authors: [mux]
 tags: [jam, rives]
+keywords: [rives, game jam]
 ---
 
 # Jam #1 recap
 
+<center>
+![Cookies powering pc](/img/blog/jam1.png)
+</center>
+
 Jam #1 was jam-packed with cool games. The Jam was also hosted on [Itch.io](https://itch.io/jam/rives1) and is the first in many RIVES jams to come!!
 
 We had over 40 participants and 9 submissions for this first edition. The jam focused on retro games with metrics to establish a score. A metric system (that can be used to establish a score) was a requirement for this jam. RIVES can natively add players to leaderboards based on their scores, making this an interesting criteria for the jam.
-  
+
+<!--truncate-->
+
 Check out the great games developed during the jam below. You can test them directly here, or compete onchain in the RIVES app. 
 
 
