Polish Jam 2 blog post

--- a/blog/2024-08-22-jam2recap.md
+++ b/blog/2024-08-22-jam2recap.md
@@ -8,7 +8,6 @@ tags: [jam, rives]
 keywords: [rives, game jam]
 ---
 
-
 # Jam #2 ft. Forgotten Runes recap
 
 <center>
@@ -23,32 +22,21 @@ We had 2 amazing vampire survivor games, 1 flappy bird-inspired game, and one to
 
 ### Wizard Pest Control Services Inc by [Ednekebno](https://x.com/ednekebno)
 
-
-
 This is Ednekebnos' second JAM. And the second time he takes home the first spot - well deserved. This take on a vampire survivor for RIVES is very complete and a blast to play, impressive that this was built within a game jam. It has 11 spells and 33 possible upgrade choices! I love the twist on the Magic theme, blending it with pest control. On top of the Forgotten Runes assets, there is also some RIVES lore incorporated in the game. And the game has a trailer, wow!
 
- 
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam2/pestcontrol.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
-#### Controls:
+#### Controls
 
 Use a game controller directions and A button or the arrow keys and z on your keyboard. Diagonal movement is possible (e.g. on the keyboard hold down up and left arrows to go up to the left)
 
-  
-
 #### Description:
-
 
 Here at Wizard Pest Control Services Inc we take pest control seriously. You know the story: a wizard gets a familiar and thinks "Wouldn't it be cool to have another one". The familiars, well, get familiar and before you know it there are swarms of baby creatures. It's a story we hear all too often. These unbound creatures turn evil, leading to more unbound creatures and you suddenly realize: YOU HAVE A PROBLEM.
 
-  
-
 Despair not, for we at Wizard Pest Control Services Inc are experts in magical pest removal. Choose from one of our 6 pest control experts and we'll have your problem solved before you can say "why couldn't I have just sticked to having one". Our experts are on top of their continuing professional development and constantly upgrade their skills through magical gems that inexplicably spawn from dying creatures (and by the way, any gold coins we find our ours too - it's in our standard terms and conditions).
 
-  
-
 Don't delay. Call Wizard Pest Control Services Inc today. Wizard Pest Control Services Inc is an equal opportunities employer*
-
-  
 
 #### Links:
 
@@ -58,79 +46,57 @@ Don't delay. Call Wizard Pest Control Services Inc today. Wizard Pest Control Se
 
 ### Forgotten Survivors by [pickleberto](https://x.com/pickleberto)
 
-  
-
 This is also Pickleberto’s second RIVES JAM! Another vampire survivor-type game that was submitted in this jam! Great game as well, it’s smooth and I love the simplicity here. On top of using the main Forgotten Runes characters, Pickleberto also implemented some other assets such as the snake, the book, and other lore from the Forgotten Runes which is awesome. Also, check out the endless mode!
 
-  
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam2/forgotten-survivors.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
 #### Controls:
 
 Directionals left/right up/down to move; Press X on starting screen for endless mode
 
-  
-
 #### Description:  
   
 Forgotten Survivors is heavily inspired by the famous [Vampire Survivors](https://poncle.itch.io/vampire-survivors). This is a smaller version made in C to run in [RIVES](https://rives.io/) for the [RIVES Jam #2](https://itch.io/jam/rives2). Press any key to start the normal mode, where you have to survive for 6 waves to win. If you press X (or the gamepad button A2) on the first screen, you will start an endless mode where you can level up to level 100 and need to survive for as long as you can.
-
-  
 
 #### Links:
 
 -   [Jam submission page](https://itch.io/jam/rives2/rate/2899422)
 -   [Itch game page](https://pickleberto.itch.io/forgotten-survivors)
-    
 
 ### Flappy Spider by [nidaabaris](https://x.com/nidaaBaris)
 
-  
-
 It was a surprise to see this submission by Nida, and a great one! Nida is new to programming, so this was amazing to see. This submission is a flappy bird-inspired game with a spider instead of a bird, fitting the magic theme. It also has additional elements, such as barrels and potions, adding points and extending the game with additional lives. I can see tons of potential game modes/mods with a game like this!
 
-  
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam2/flappy_spider.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
 #### Controls: 
-Single button game: press z to jump
 
-  
+Single button game: press z to jump
 
 #### Description:
 
-  
-
 Flappy Spider is a thrilling twist on the classic Flappy Bird formula, designed specifically for the Rives ecosystem. In this retro-inspired game, you take control of a pixelated spider as it navigates through a series of challenging obstacles and collects valuable items.
-
-  
 
 Your mission? Achieve the highest score possible. The map is filled with barrels and health potions, each serving a unique purpose. Passing through obstacles will increase your score by 1 point, but the real challenge lies in collecting the barrels scattered throughout the environment—each barrel boosts your score by 5 points!
 
-  
-
 #### Links:
+
 -   [Jam submission page](https://itch.io/jam/rives2/rate/2898901)
 -   [Itch game page](https://nidaabaris.itch.io/flappyspider)
-    
-
-  
 
 ### The Lone Sorcerer by [DeLuxe1337](https://deluxe1337.itch.io/)
 
-  
-
 This is also DeLuxe’s second RIVES JAM and is the start of a 2D top-down shooter. It is still unfinished, but I can already see the potential. This game does not use sprites but has a storyline embedded in the game flow.
 
-  
+<div align="center"><iframe src="https://emulator.rives.io/#simple=true&cartridge=https://raw.githubusercontent.com/edubart/cartridges/main/jam2/sorcerer-compiled.sqfs" allowFullScreen className="rivemu-frame"></iframe></div>
 
-####  Controls: 
+#### Controls:
 
 E to shoot, arrows to move, W for next
 
 #### Description: 
 
 The Lone Sorcerer. Play as a wizard after the downfall of civilization. Project is incomplete
-
-  
 
 #### Links:
 
@@ -145,9 +111,9 @@ Very excited to play these games on app.rives.io (soon), compete on custom leade
 
 The final ranking for this jam, after voting is as follows: 
 
-1: Wizard Pest Control Services Inc by Ednekebno
-2: Forgotten Survivors by Pickleberto
-3: Flappy Spider by Nidaabaris
+1. Wizard Pest Control Services Inc by [Ednekebno](https://x.com/ednekebno)
+2. Forgotten Survivors by [Pickleberto](https://x.com/pickleberto)
+3. Flappy Spider by [Nidaabaris](https://x.com/nidaaBaris)
 
 You can find the votes across criteria [here](https://itch.io/jam/rives2/results). 
  
