Add truncate tag to JAM2 article

--- a/blog/2024-08-21-jam2recap.md
+++ b/blog/2024-08-21-jam2recap.md
@@ -17,6 +17,8 @@ keywords: [rives, game jam]
 
 This post marks the end of [RIVES JAM #2](https://itch.io/jam/rives2), this time with [Forgotten Runes](https://www.forgottenrunes.com/). We had over 36 participants join the jam, with 4 submissions. For this one, the theme was Magic, and participants had the opportunity to win 1 of 3 warrior NFTs offered by Forgotten Runes on top of the RIVES prize pool.
 
+<!--truncate-->
+
 We had 2 amazing vampire survivor games, 1 flappy bird-inspired game, and one top-down shooter-type game. You can dive deeper into the different games, descriptions, and links below. Make sure to playtest them directly here in the post. Soon you’ll be able to collect and compete on some of these games, onchain in the [rives app](https://app.rives.io/).
 
 ### Wizard Pest Control Services Inc by [Ednekebno](https://x.com/ednekebno)
